# qms

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
app_qms/: apps.py
app_rms/: apps.py
qmsproj/: asgi.py  settings.py  urls.py  wsgi.py
