[project]
authors = [
  {name = "Marcelo Amaral", email = "marceloamaral1364@gmail.com"},
]
name = "quotation-system"
version = "0.1.0"
description = "A study purpose project that contains a QMS that consumes from a RMS application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0",
    "et-xmlfile==2.0.0",
    "numpy==2.3.5",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
